# matchmaker

./: .gitignore  FAISS_RECOMMENDER.md  README.md  environment.yml  profile_batch.py  profile_detailed.py  profile_mutual_score.py  pyproject.toml  rmm_log.txt  test_batch_simple.py  test_full_pipeline.py
dev/: dev.ipynb  test.ipynb
docs/: elo_system.md
examples/: basic_usage.ipynb  compare_league_vs_noleague.ipynb  elo_league_demo.ipynb  example.ipynb  example.py  league_match_analysis.ipynb  recommend.ipynb
src/matchmaker/: __init__.py  engine.py  matchmaker.py
src/matchmaker.egg-info/: PKG-INFO  SOURCES.txt
src/matchmaker/data/: loader.py
src/matchmaker/models/: als.py  elo.py  engagement.py  graph.py  popularity.py  recommender.py
src/matchmaker/serving/: __init__.py  reco_pop.py  reco_vanilla.py
