[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "matchmaker"
version = "0.1.0"
description = "Lightweight matching engine with evaluation framework."
authors = [
    { name = "Zain Ansari" }
]
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]
