[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "matchmaker"
version = "0.1.1"
description = "A GPU-accelerated user-to-user recommender engine."
authors = [
    { name = "Zain Ansari" }
]
readme = "README.md"
requires-python = ">=3.9"

# These are the HARD requirements for the library.
# The platform markers prevent installation errors on non-Linux systems.
# Note: CuPy and CUDA packages are provided by RAPIDS conda environment
# DO NOT specify cuda/cupy packages here to avoid conflicts with RAPIDS
dependencies = [
  "numpy",
  "pandas"
]

# Optional dependencies for users who want to install without RAPIDS
[project.optional-dependencies]
gpu = [
  "cudf-cu12>=25.0.0; platform_system=='Linux'",
  "cugraph-cu12>=25.0.0; platform_system=='Linux'",
  "cuml-cu12>=25.0.0; platform_system=='Linux'",
  "rmm-cu12>=25.0.0; platform_system=='Linux'",
  "cupy-cuda12x>=13.0; platform_system=='Linux'"
]

[tool.setuptools.packages.find]
where = ["src"]
